--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "date-fns": "2.0.0-alpha.27",
     "react": "16.8.4",
     "react-dom": "16.8.4",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "@types/react": "16.8.8",
